# jabberd

./: .clang-format  .cvslog  .drone.yml  .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  README.SQL  README.config  README.filespool  README.md  README.protocols  TODO  UPGRADE  bootstrap  configure  configure.ac  configure.in  generateSSLkey  jabber.xml  jabber.xml.dist.in  jsx.xml  license-header.txt  mysql.sql  xdb_postgresql.xml
dnsrv/: Makefile  Makefile.am  dnsrv.c  dnsrv.cc  jsx.xml  srv_resolv.c  srv_resolv.h
jabberd/: .cvsignore  Makefile  Makefile.am  README  README.CONFIG  README.SM  TODO  acl.c  acl.cc  build.sh  config.c  config.cc  deliver.c  deliver.cc  gcrypt_init.c  heartbeat.c  heartbeat.cc  jabberd-load.h  jabberd.c  jabberd.cc  jabberd.h  jabberd.xml  jbox.xml  jsx.xml  load.c  log.c  log.cc  mio.c  mio.cc  mio_raw.c  mio_raw.cc  mio_ssl.c  mio_std.c  mio_tls.c  mio_tls.cc  mio_xml.c  mio_xml.cc  mtq.c  mtq.cc  single.h  (+5 more)
jabberd/base/: Makefile  Makefile.am  base.c  base.cc  base_accept.c  base_accept.cc  base_connect.c  base_connect.cc  base_dir.c  base_dir.cc  base_dynamic.c  base_exec.c  base_file.c  base_format.c  base_format.cc  base_host.c  base_importspool.c  base_importspool.cc  base_load.cc  base_logtype.c  base_ns.c  base_null.c  base_stderr.c  base_stdout.c  base_stdout.cc  base_syslog.c  base_syslog.cc  base_to.c  base_to.cc  base_unsubscribe.c  base_unsubscribe.cc  jsx.xml
jabberd/lib/: Makefile  Makefile.am  base64.c  base64.cc  crc32.c  crc32.cc  expat.c  expat.cc  genhash.c  hash.cc  hashtable.c  hmac.cc  jabberdlib.h  jbox.xml  jid.c  jid.cc  jpacket.c  jpacket.cc  jutil.c  jutil.cc  karma.c  karma.cc  lib.h  messages.cc  pool.c  pool.cc  pproxy.c  rate.c  sha.c  socket.c  socket.cc  str.c  str.cc  xhash.c  xhash.cc  xmlnode.c  xmlnode.cc  xmlparse.c  xstream.c  xstream.cc
jabberd14/: .cvsignore  .cvslog  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  README.SQL  README.karma  README.protocols  TODO  UPGRADE  bootstrap  cacerts.pem  configure  configure.ac  configure.in  generateSSLkey  jabber.xml  jabber.xml.dist.in  jbox.xml  jsx.xml  license-header.txt  pgsql_createdb.sql  selfsigned.cnf  shell.nix  xdb_postgresql.xml
jabberd14/ac-helpers/: openssl.m4
jabberd14/configs/: agents_list.xml  developer.xml  home.xml  intranet.xml  standard.xml
jabberd14/cygwin/: Makefile.jabberd  Makefile.pthsock  Makefile.top  Makefile.xdb_file  README  dllfixup.c  dllinit.c  jabber.xml  jsm.def  pthsock_client.def  setup.sh  xdb_file.def
jabberd14/dialback/: Makefile  Makefile.am  dialback.c  dialback.cc  dialback.h  dialback_in.c  dialback_in.cc  dialback_out.c  dialback_out.cc  jsx.xml
jabberd14/dnsrv/: Makefile  Makefile.am  dnsrv.c  dnsrv.cc  jbox.xml  srv_resolv.c  srv_resolv.cc  srv_resolv.h
jabberd14/docs/: Makefile  howto.sgml  karma.txt  main.sgml  stylesheet.dsl
jabberd14/jabberd/: Makefile  Makefile.am  README  README.CONFIG  TEST  TODO  acl.c  acl.cc  build.sh  config.c  config.cc  deliver.c  deliver.cc  gcrypt_init.c  heartbeat.c  heartbeat.cc  instance_base.cc  jabberd.c  jabberd.cc  jabberd.h  jabberd.xml  jbox.xml  jsx.xml  load.c  log.c  log.cc  mio.c  mio.cc  mio_raw.c  mio_raw.cc  mio_ssl.c  mio_tls.c  mio_tls.cc  mio_xml.c  mio_xml.cc  mtq.c  mtq.cc  single.h  static.c  subjectAltName.asn  (+3 more)
jabberd14/jabberdlib/: Cargo.toml  build.rs
jabberd14/jadc2s/: .cvsignore  ChangeLog  Makefile  Makefile.am  NEWS  PROTO  README  clients.c  configure.in  conn.c  connect.c  jadc2s.c  jadc2s.h  jadc2s.xml  jadc2s.xml.dist  platform-settings  readwrite.c
jabberd14/jsm/: Makefile  Makefile.am  authreg.c  authreg.cc  config.c  deliver.c  deliver.cc  init.c  jbox.xml  jsm.c  jsm.cc  jsm.h  jsx.xml  main.c  modules.c  modules.cc  offline.c  offline.cc  serialization.c  serialization.cc  server.c  server.cc  services.c  sessions.c  sessions.cc  shutdown.c  static.c  unknown.c  users.c  users.cc  util.c  util.cc
jabberd14/man/: Makefile.am  jabber.xml.5.in  jabberd.8.in
jabberd14/po/: Makefile.am  de.po  fr.po  hu.po  it.po  jabberd14.po  nl.po
jabberd14/proxy65/: Makefile.am  proxy65.cc  proxy65.h
jabberd14/pthsock/: Makefile  Makefile.am  README.pthsock_client  client.c  client.cc  dialback.c  io.h  io_select.c  jbox.xml  karma.c  karma.h  pthsock_client.c  pthsock_server.c  server.c
jabberd14/resolver/: Makefile.am  resend_service.cc  resolver.cc  resolver.h  resolver_job.cc
jabberd14/xdb_file/: Makefile  Makefile.am  crc32.cc  jabberdxdbfile.h  jsx.xml  xdb_file.c  xdb_file.cc  xdbfiletool.c  xdbfiletool.cc
jabberd14/xdb_sql/: Makefile.am  xdb_sql.c  xdb_sql.cc
jadc2s/: AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  PROTO  README  README.SASL  README.maintainer  TODO  UPGRADING  bootstrap  clients.c  clients.cc  configure  configure.ac  configure.in  conn.c  conn.cc  connect.c  connect.cc  jadc2s.c  jadc2s.cc  jadc2s.h  jadc2s.xml  jadc2s.xml.dist  rate.c  rate.cc  test.cc
jadc2s/ac-helpers/: Makefile.am  openssl.m4
jadc2s/mio/: Makefile.am  mio.c  mio.cc  mio.h  mio_epoll.h  mio_select.h  rate.c
jadc2s/util/: Makefile.am  config.c  config.cc  dom_util.cc  hash.cc  jid.c  jid.cc  log.c  log.cc  nad.c  nad.cc  nsparser.cc  pointer.tcc  pool.c  pool.cc  sha.c  sha.cc  str.c  str.cc  util.h  util2.h  xhash.c  xmlistream.cc  xmlostream.cc
jsm/: Makefile  Makefile.am  authreg.c  authreg.cc  config.c  deliver.c  deliver.cc  init.c  jbox.xml  jsm.c  jsm.cc  jsm.h  jsx.xml  modules.c  modules.cc  offline.c  offline.cc  serialization.c  server.c  server.cc  sessions.c  sessions.cc  shutdown.c  users.c  users.cc  util.c  util.cc
jsm/modules/: Makefile  Makefile.am  jbox.xml  jsx.xml  mod_admin.c  mod_agents.c  mod_agents.cc  mod_announce.c  mod_announce.cc  mod_archive.c  mod_auth.c  mod_auth_0k.c  mod_auth_crypt.c  mod_auth_crypt.cc  mod_auth_digest.c  mod_auth_digest.cc  (+40 more)
po/: Makefile.am  de.po  fr.po  hu.po  it.po  nl.po
xdb_file/: Makefile  Makefile.am  jbox.xml  jsx.xml  xdb_file.c  xdb_file.cc  xdbfiletool.c  xdbfiletool.cc
(+319 files in other folders)
